Template Maintenance! Happy 2018!

--- a/_includes/bio-spell.html
+++ b/_includes/bio-spell.html
@@ -1,10 +1,10 @@
 
 <section id="author">
 
-	<h3>About the Author</h3>
+	<h2>About the Author</h2>
 
-	<img src="https://www.gravatar.com/avatar/89e429d4a3effa9601cd19a851c0003e?s=200" alt="Michael Spellacy" style="width: 125px; height: 125px; border-radius: 50%; margin: 0 auto;">
+	<img src="https://www.gravatar.com/avatar/89e429d4a3effa9601cd19a851c0003e?s=200" alt="Michael Spellacy">
 
-	<p style="text-align: center;">I am Michael "Spell" Spellacy, Director of User Interface Design and Development at <a href="https://www.tmp.com/">TMP Worldwide</a>. If you have any questions, feel free to contact me on <a href="https://github.com/michaelspellacy">Github</a> or follow me on <a href="https://twitter.com/spellacy">Twitter</a>.</p>
+	<p>I am Michael "Spell" Spellacy, Director of User Interface Design and Development at <a href="https://www.tmp.com/">TMP Worldwide</a>. If you have any questions, feel free to contact me on <a href="https://github.com/michaelspellacy">Github</a> or follow me on <a href="https://twitter.com/spellacy">Twitter</a>.</p>
 
 </section>
