--- a/_includes/bio-deb.html
+++ b/_includes/bio-deb.html
@@ -5,6 +5,6 @@
 
 	<img src="/assets/img/bio-deb.jpg" alt="Deborah Foerst">
 
-	<p>Deborah Foerst is a Senior Front-end Developer <a href="https://www.tmp.com/">TMP Worldwide</a>. If you have any questions, feel free to contact her on <a href="https://github.com/dfoerst">Github</a> or reach out to her via <a href="debbie.foerst@tmp.com">email</a>.</p>
+	<p>Deborah Foerst is a Senior Front-end Developer at <a href="https://www.tmp.com/">TMP Worldwide</a>. If you have any questions or just want to talk shop, feel free to contact her on <a href="https://github.com/dfoerst">Github</a> or reach out to her via <a href="debbie.foerst@tmp.com">email</a>.</p>
 
 </section>
