--- a/_includes/bio-deb.html
+++ b/_includes/bio-deb.html
@@ -5,6 +5,6 @@
 
 	<img src="/assets/img/bio-deb.jpg" alt="Deborah Foerst">
 
-	<p>Deborah Foerst is a Senior Front-end Developer at <a href="https://radancy.com/">Radancy</a>. If you have any questions or just want to talk shop, feel free to contact her on <a href="https://github.com/dfoerst">Github</a> or reach out via <a href="mailto:debbie.foerst@tmp.com">email</a>.</p>
+	<p>Deborah Foerst is a Senior Front-end Developer at <a href="{{ site.company-url }}">{{ site.company-name }}</a>. If you have any questions or just want to talk shop, feel free to contact her on <a href="https://github.com/dfoerst">Github</a> or reach out via <a href="mailto:debbie.foerst@radancy.com">email</a>.</p>
 
 </section>
