--- a/_includes/bio-spell.html
+++ b/_includes/bio-spell.html
@@ -3,8 +3,8 @@
 
 	<h2>About the Author</h2>
 
-	<img src="https://www.gravatar.com/avatar/89e429d4a3effa9601cd19a851c0003e?s=200" alt="Michael Spellacy">
+	<img src="{{ site.owner-image }}?s=200" alt="{{ site.owner-name }}">
 
-	<p>Michael "Spell" Spellacy is the Director of Accessibility at <a href="https://radancy.com/">Radancy</a>. If you have any questions, feel free to contact him on <a href="https://github.com/michaelspellacy">Github</a> or see what he is up to on <a href="https://michaelspellacy.com">his blog</a>.</p>
+	<p>Michael "Spell" Spellacy is the Director of Accessibility at <a href="{{ site.company-url }}">{{ site.company-name }}</a>. If you have any questions, feel free to contact him on <a href="https://github.com/michaelspellacy">Github</a> or see what he is up to on <a href="https://michaelspellacy.com">his blog</a>.</p>
 
 </section>
