--- a/_includes/bio-deb.html
+++ b/_includes/bio-deb.html
@@ -3,7 +3,7 @@
 
 	<h2>About the Author</h2>
 
-	<img src="{{ site.git-url }}/img/bio-deb.jpg" alt="Deborah Foerst">
+	<img src="https://avatars.githubusercontent.com/u/6609883?s=400&v=4" alt="Deborah Foerst">
 
 	<p>Deborah Foerst is a Senior Front-end Developer at <a href="{{ site.company-url }}">{{ site.company-name }}</a>. If you have any questions or just want to talk shop, feel free to contact her on <a href="https://github.com/dfoerst">Github</a> or reach out via <a href="mailto:debbie.foerst@radancy.com">email</a>.</p>
 
